@@ -77,7 +77,7 @@
                     <div><img src="../img/1220.png" alt="">شروع شدن</div><span></span>
                 </summary>
                 <div class="lesson-tree">
-                    <div>
+                    <div  class="green-tick">
                         <a href="">
                             <h5>1.1 درس</h5>
                             <p>به پایتون خوش آمدید!
@@ -102,7 +102,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>2.1 درس
                             </h5>
@@ -125,7 +125,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>3.1 درس
                             </h5>
@@ -137,7 +137,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>درس 4.1
                             </h5>
@@ -149,7 +149,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>5.1 تمرین
                             </h5>
@@ -181,7 +181,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>5.4 تمرین
                             </h5>
@@ -192,7 +192,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>درس 5.5
                             </h5>
@@ -204,7 +204,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="">
                             <h5>پروژه 7 کد
                             </h5>
