@@ -79,7 +79,7 @@
                     <div><img src="../img/1220.png" alt="">Getting Started</div><span></span>
                 </summary>
                 <div class="lesson-tree">
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>1.1 lesson</h5>
                             <p>welcome to python!</p>
@@ -98,7 +98,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>2.1 lesson</h5>
                             <p>simple opration</p>
@@ -118,7 +118,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>3.1 lesson</h5>
                             <p>floats</p>
@@ -137,7 +137,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>5.1 practice</h5>
                             <p>qoutint & remainder</p>
@@ -164,7 +164,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>5.4 practice</h5>
                             <p>textbook for students</p>
@@ -174,7 +174,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>5.5 lesson</h5>
                             <p>module 1 quiz</p>
@@ -183,7 +183,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="">
                             <h5>7 code project</h5>
                             <div>
@@ -199,7 +199,7 @@
                     <div><img src="../img/1220.png" alt="">Getting Started</div><span></span>
                 </summary>
                 <div class="lesson-tree">
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>1.1 lesson</h5>
                             <p>welcome to python!</p>
@@ -218,7 +218,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>2.1 lesson</h5>
                             <p>simple opration</p>
@@ -238,7 +238,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>3.1 lesson</h5>
                             <p>floats</p>
@@ -257,7 +257,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>5.1 practice</h5>
                             <p>qoutint & remainder</p>
@@ -284,7 +284,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>5.4 practice</h5>
                             <p>textbook for students</p>
@@ -294,7 +294,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>5.5 lesson</h5>
                             <p>module 1 quiz</p>
@@ -303,7 +303,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="">
                             <h5>7 code project</h5>
                             <div>
@@ -314,13 +314,12 @@
                     </div>
                 </div>
             </details>
-
             <details>
                 <summary>
                     <div><img src="../img/1220.png" alt="">Getting Started</div><span></span>
                 </summary>
                 <div class="lesson-tree">
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>1.1 lesson</h5>
                             <p>welcome to python!</p>
@@ -339,7 +338,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>2.1 lesson</h5>
                             <p>simple opration</p>
@@ -359,7 +358,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>3.1 lesson</h5>
                             <p>floats</p>
@@ -378,7 +377,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>5.1 practice</h5>
                             <p>qoutint & remainder</p>
@@ -405,7 +404,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>5.4 practice</h5>
                             <p>textbook for students</p>
@@ -415,7 +414,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>5.5 lesson</h5>
                             <p>module 1 quiz</p>
@@ -424,7 +423,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="">
                             <h5>7 code project</h5>
                             <div>
@@ -435,13 +434,12 @@
                     </div>
                 </div>
             </details>
-
             <details>
                 <summary>
                     <div><img src="../img/1220.png" alt="">Getting Started</div><span></span>
                 </summary>
                 <div class="lesson-tree">
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>1.1 lesson</h5>
                             <p>welcome to python!</p>
@@ -460,7 +458,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>2.1 lesson</h5>
                             <p>simple opration</p>
@@ -480,7 +478,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>3.1 lesson</h5>
                             <p>floats</p>
@@ -499,7 +497,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>5.1 practice</h5>
                             <p>qoutint & remainder</p>
@@ -526,7 +524,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>5.4 practice</h5>
                             <p>textbook for students</p>
@@ -536,7 +534,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>5.5 lesson</h5>
                             <p>module 1 quiz</p>
@@ -545,7 +543,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="">
                             <h5>7 code project</h5>
                             <div>
@@ -556,13 +554,12 @@
                     </div>
                 </div>
             </details>
-
             <details>
                 <summary>
                     <div><img src="../img/1220.png" alt="">Getting Started</div><span></span>
                 </summary>
                 <div class="lesson-tree">
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>1.1 lesson</h5>
                             <p>welcome to python!</p>
@@ -581,7 +578,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>2.1 lesson</h5>
                             <p>simple opration</p>
@@ -601,7 +598,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>3.1 lesson</h5>
                             <p>floats</p>
@@ -620,7 +617,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="blue-pluss">
                         <a href="">
                             <h5>5.1 practice</h5>
                             <p>qoutint & remainder</p>
@@ -647,7 +644,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="" class="luck-lesson">
                             <h5>5.4 practice</h5>
                             <p>textbook for students</p>
@@ -657,7 +654,7 @@
 
                         </a>
                     </div>
-                    <div>
+                    <div class="green-tick">
                         <a href="">
                             <h5>5.5 lesson</h5>
                             <p>module 1 quiz</p>
@@ -666,7 +663,7 @@
                             </div>
                         </a>
                     </div>
-                    <div>
+                    <div class="disable">
                         <a href="">
                             <h5>7 code project</h5>
                             <div>
