@@ -15,4 +15,15 @@
 
 1400/9/9
 1-add "a" tag inner "li" in social-media-list class in footer
-
+//presian//
+/course-details.html & course-details-fa.html
+1-اضافه کردن سه کلاس مختلف به هر ریف با توحه به رنگ ایکن هر ایتم (یعنی به دیو هایی ک در دبو کلاس ⬇ قرار دارند)
+"lesson tree"
+2-مثلا کلاس "⬇"برای ایتم های با تیک سبز
+"green-tick"
+3-کلاس"⬇"برای ایتم های پرو
+"blue-plus"
+4-و کلاس "⬇" براس ایتمهای قفل
+"disable"
+5-هماهنگ کردن دایره های هر ردیف(همان دبوهایی ک کلاس مخصوص گرفته اند برای تعیین رنگ)با وضعیت ان ایتم
+6-اضاقه کردن عکس اس وی جی برای کلاس پرو
